[gd_scene load_steps=10 format=3 uid="uid://ca1ev3cpn1xvb"]

[ext_resource type="Script" path="res://levels/outbox.gd" id="1_v6g63"]
[ext_resource type="Texture2D" uid="uid://dkw71bm48xp0b" path="res://assets/materials_textures/kenney_prototypetextures/PNG/Dark/texture_01.png" id="2_45dlq"]
[ext_resource type="Texture2D" uid="uid://bggfuv5a4rplj" path="res://assets/materials_textures/kenney_prototypetextures/PNG/Dark/texture_04.png" id="3_6sqv0"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7ihsb"]
albedo_texture = ExtResource("2_45dlq")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_piwbe"]
height = 3.0
radius = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j5kb5"]
albedo_texture = ExtResource("3_6sqv0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q1phs"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gyfdk"]
size = Vector3(2, 5, 12)

[sub_resource type="BoxMesh" id="BoxMesh_wlkx4"]
size = Vector3(2, 5, 12)

[node name="Outbox" type="Node3D"]
script = ExtResource("1_v6g63")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2.4, 0)
flip_faces = true
size = Vector3(4, 4, 4)
material = SubResource("StandardMaterial3D_7ihsb")

[node name="OmniLight3D" type="OmniLight3D" parent="CSGBox3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="Outbox_Area3D" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Outbox_Area3D"]
physics_interpolation_mode = 2
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_piwbe")

[node name="Outbox_Label3D" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.1, 2.2, 0)
text = "whisper"

[node name="Wall_CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 2.5, 0)
size = Vector3(2, 5, 12)
material = SubResource("StandardMaterial3D_j5kb5")

[node name="Pipe_CSGCylinder3D" type="CSGCylinder3D" parent="Wall_CSGBox3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -0.7, 0)
radius = 0.13
height = 2.1
sides = 16
material = SubResource("StandardMaterial3D_q1phs")

[node name="Pipe_CSGCylinder3D2" type="CSGCylinder3D" parent="Wall_CSGBox3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, -0.7, 0)
operation = 2
radius = 0.1
height = 2.1
sides = 16
material = SubResource("StandardMaterial3D_q1phs")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_gyfdk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
visible = false
mesh = SubResource("BoxMesh_wlkx4")

[connection signal="body_entered" from="Outbox_Area3D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Outbox_Area3D" to="." method="_on_body_exited"]
